--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "d": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node ./server.js",
+    "d": "cross-env NODE_ENV=development nodemon ./server.js",
+    "lint": "eslint **/*.js",
+    "lint:fix": "eslint --fix **/*.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "7.0.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.2",
+    "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "eslint": "7.19.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "5.2.0",
+    "nodemon": "2.0.15"
   }
 }
