--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.2",
     "path": "^0.12.7",
     "shortid": "^2.2.16"
   },
